UI for particular staff Detail Page & few changes
Changed text color of button for  login, password (change & reset) pages.

--- a/attendance/static/scss/style.scss
+++ b/attendance/static/scss/style.scss
@@ -231,6 +231,10 @@ body {
     border: 1px solid #c9d7e2;
 }
 
+.border_color_white{
+    border-color: #ffffff;
+}
+
 .input_cust{
     margin-top: 3px;
 	font-size: 1.1rem;
@@ -246,7 +250,19 @@ body {
 
 .body_box_shadow{
     background-color: #daeaf6;
-		border-radius: 2rem !important;
-		box-shadow: 8px 8px 16px #aebbc5,
+	border-radius: 2rem !important;
+	box-shadow: 8px 8px 16px #aebbc5,
 			-8px -8px 16px #daeaf6;
+}
+
+.modal_box_shadow{
+    background-color: #daeaf6;
+	border-radius: 2rem !important;
+}
+
+.table_box_shadow{        
+    background-color: #daeaf6;
+	border-radius: 2rem !important;
+    box-shadow: 6px 6px 12px #b8b9be,
+        -6px -6px 12px #daeaf6 !important;
 }
