--- a/attendance/templates/registration/password_change_form.html
+++ b/attendance/templates/registration/password_change_form.html
@@ -44,7 +44,7 @@
 					{% csrf_token %}
 					{{ form|crispy }}
 					<button
-						class="btn btn-block border_white btn-cust neu_icon text_d_blue text-center align-self-center"
+						class="btn btn-block border_white btn-cust neu_icon text-success text-center align-self-center"
 						type="submit">Change My Password
 					</button>
 				</form>
