--- a/attendance/templates/registration/password_reset_form.html
+++ b/attendance/templates/registration/password_reset_form.html
@@ -42,7 +42,7 @@
           {% csrf_token %}
           {{ form|crispy }}
           <button type="submit"
-            class="btn btn-block border_white btn-cust neu_icon text_d_blue text-center align-self-center">Submit</button>
+            class="btn btn-block border_white btn-cust neu_icon text-success text-center align-self-center">Submit</button>
         </form>
       </div>
     </div>
