UI for Manage All Staff Detail Page & few changes
Changes : instead of  border-top, now it is using border-bottom for table viewing purposes.

--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -249,10 +249,18 @@ body {
   border-radius: 2rem !important;
 }
 
+/* Table */
 .table_box_shadow {
   background-color: #daeaf6;
   border-radius: 2rem !important;
   -webkit-box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #daeaf6 !important;
           box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #daeaf6 !important;
+}
+
+/* Table scroll for vertical */
+.table_wrapper {
+  max-height: 400px;
+  overflow-y: auto;
+  display: inline-block;
 }
 /*# sourceMappingURL=style.css.map */
