--- a/attendance/templates/user_module/staff_detail.html
+++ b/attendance/templates/user_module/staff_detail.html
@@ -17,7 +17,8 @@
 
 	#tab_res table td,
 	.table th {
-		border-color: #ffffff;
+		border-top: 0;
+		border-bottom: 1px solid #ffffff;
 	}
 </style>
 
