UI for Create Subject Page & few changes
Changes:
  Inorder to update Ui 'class' attribute for create subject page, i need to manually add a queryset for forms fields (like sub_type, handled_by, classroom)
  create staff button change of text color to green.

--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -213,7 +213,7 @@
         <!-- Overlay Effect -->
         <div class="overlay d-md-none" id="overlay"></div>
         <!-- Main Content Area -->
-        <section id="main_content" class="p-0 m-2">
+        <section id="main_content" class="p-0 m-md-2">
           {% block content %}
           {% endblock %}
         </section>
