--- a/attendance/templates/user_module/createstaff.html
+++ b/attendance/templates/user_module/createstaff.html
@@ -44,7 +44,7 @@
 				{{ form.confirm_password|as_crispy_field }}
 			</div>
 			<div class="form-group col-12 d-flex justify-content-center justify-content-md-start">
-				<button class="btn border_white btn-cust neu_icon text_d_blue align-self-center" type="submit">
+				<button class="btn border_white btn-cust neu_icon text-success align-self-center" type="submit">
 					Create&nbsp;Staff
 				</button>
 			</div>
