UI for subjest list view & added new book images

--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -40,6 +40,10 @@ body {
   text-transform: capitalize;
 }
 
+.font_size_normal {
+  font-size: 1.2rem;
+}
+
 /* Customizing Bootstrap */
 .nav-link {
   color: #062743;
@@ -99,6 +103,11 @@ body {
 
 .max_95 {
   max-width: 95%;
+}
+
+/* Border Radius */
+.img_border_radius {
+  border-radius: 1.2rem !important;
 }
 
 /* Left Side Nav Bar */
