my account edit view is added

--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -111,7 +111,7 @@
             </li>
             {% if user.is_authenticated %}
             <li class="list-group">
-              <a href="#" class="side_bar_link fill_d_blue">
+              <a href="{% url 'my_account' %}" class="side_bar_link fill_d_blue">
                 <svg width="1.3em" height="1.3em" viewBox="0 0 16 16" class="mr-2" xmlns="http://www.w3.org/2000/svg">
                   <g>
                     <path
