staff list view added.

--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -181,7 +181,7 @@
               </a>
             </li>
             <li class="list-group">
-              <a href="#" class="side_bar_link fill_d_blue">
+              <a href="{% url 'staffs' %}" class="side_bar_link fill_d_blue">
                 <svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="chalkboard-teacher" role="img"
                   xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="1.2em" height="1.2em" class="mr-2">
                   <g class="fa-group">
@@ -193,7 +193,7 @@
                       class="fa-primary"></path>
                   </g>
                 </svg>
-                Staff
+                Staffs
               </a>
             </li>
             {% endif %}
