--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -86,6 +86,37 @@ body {
   outline: none !important;
 }
 
+.cust_date {
+  margin-top: 3px;
+  font-size: 1.1rem;
+  font-family: 'Karla', sans-serif;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  color: #062743 !important;
+  background-color: #daeaf6 !important;
+  border: 1px solid #c9d7e2;
+  border-color: #daeaf6 !important;
+  border-radius: 2rem !important;
+  -webkit-box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+          box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+}
+
+.cust_date:focus {
+  outline: none !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
+
+.cust_date:active {
+  outline: #c9d7e2 !important;
+}
+
+.cust_date:hover {
+  color: #062743;
+  -webkit-box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+          box-shadow: 5px 5px 10px #c2d0db,  -5px -5px 10px #e5f6ff;
+}
+
 /* Main Content */
 .neu_icon {
   -webkit-transition: all 0.4s;
@@ -256,6 +287,22 @@ body {
 .modal_box_shadow {
   background-color: #daeaf6;
   border-radius: 2rem !important;
+}
+
+.card_box_shadow {
+  background-color: #daeaf6;
+  border-radius: 2rem !important;
+  -webkit-box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
+          box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
+}
+
+.badge_box_shadow {
+  padding: 6px;
+  border: 1px solid #c9d7e2;
+  background-color: #daeaf6;
+  border-radius: 2rem !important;
+  -webkit-box-shadow: inset 1px 1px 3px #aebbc5, inset -1px -1px 3px #daeaf6;
+          box-shadow: inset 1px 1px 3px #aebbc5, inset -1px -1px 3px #daeaf6;
 }
 
 /* Table */
