--- a/attendance/templates/attendancess/classes.html
+++ b/attendance/templates/attendancess/classes.html
@@ -1,31 +1,73 @@
 {% extends 'base.html' %}
 
+{% block title %}
+<title>SAMS | Attendance | My Classes</title>
+{% endblock %}
+
 {% block content %}
-    <h4>Hello world</h4>
-    <form action={% url 'attendancess:classes' %}>
-        <input type="date" value={{date}} name="date">
-        <input type="submit" value="Go">
+<article class="mt-3">
+    <form class="form d-flex flex-column flex-md-row" action={% url 'attendancess:classes' %}>
+        <div class="form-group mb-md-0 pl-md-4 d-flex justify-content-center justify-content-md-start text_d_blue">
+            <input class="btn mx-md-0 cust_date" type="date" value={{date}} name="date" data-toggle="tooltip"
+                title="Click the Date Icon" />
+        </div>
+        <div class="form-group mb-0 d-flex justify-content-center justify-content-md-start">
+            <input class="btn border_white btn-cust neu_icon text-success align-self-center mx-sm-3" type="submit"
+                value="Show Results" />
+        </div>
     </form>
-    {% if data %}
-        {% for class,isPosted in data %}
-            <div class="card m-4">
-                {% if isPosted %}
-                    <div class="card-header">
-                        Posted
-                    </div>
-                {% endif %}
-                <div class="card-body">             
-                    <p>{{class.hour}} hour</p>
-                    {% if isPosted %}
-                        <a href="{% url 'attendancess:check-attendance' %}?id={{class.subject.id}}&date={{date}}" class="card-link"><p>{{class.subject.sub_name}}</p></a>    
-                    {% else %}
-                        <a href="{% url 'attendancess:attendance' class.subject.id %}" class="card-link"><p>{{class.subject.sub_name}}</p></a>
-                    {% endif %}
-                    <p>{{class.set_name.classroom.get_year_display}} {{class.set_name.classroom.course}} {{class.set_name.classroom.sec|upper}}</p>
-                </div>
-            </div>
-        {% endfor %}
-    {% else %}
-        <h2>No classes.</h2>
-    {% endif %}
+</article>
+{% if data %}
+<article class="row d-flex justify-content-center justify-content-md-start my-3 mx-0 mx-md-4">
+    {% for class,isPosted in data %}
+    <section class="card card_box_shadow border_white mb-4 mx-2 m-md-2" style="width: 16.5rem;">
+        <div class="card-body">
+            {% if isPosted %}
+            <a href="{% url 'attendancess:check-attendance' %}?id={{class.subject.id}}&date={{date}}"
+                class="card-link stretched-link text-center">
+                <h5 class="capitalize">{{class.subject.sub_name}}</h5>
+            </a>
+            {% else %}
+            <a href="{% url 'attendancess:attendance' class.subject.id %}" class="card-link text-center stretched-link">
+                <h5 class="capitalize">{{class.subject.sub_name}}</h5>
+            </a>
+            {% endif %}
+            <h6 class="capitalize text-center text-muted">
+                {{class.set_name.classroom.get_year_display}} {{class.set_name.classroom.course}}
+                {{class.set_name.classroom.sec|upper}}
+            </h6>
+        </div>
+        <div class="card-footer border_color_white bg-transparent text-center text_d_blue py-3">
+            <h2 class="text-body float-left font_size_normal mb-0">
+                {{class.hour}}
+            </h2>
+            {% if isPosted %}
+            <span class="badge badge_box_shadow border_white text-success float-right">Finished</span>
+            {% else %}
+            <span class="badge badge_box_shadow border_white text-danger float-right">Not Finished</span>
+            {% endif %}
+        </div>
+    </section>
+    {% endfor %}
+</article>
+{% else %}
+<article class="d-flex flex-column flex-md-row pt-md-2">
+    <small class="form-text pt-2 pl-md-5 text-muted d-flex justify-content-center justify-content-md-start">
+        Inorder&nbsp;to&nbsp;view&nbsp;the&nbsp;attendance...
+    </small>
+    <small class="form-text pt-md-2 text-muted d-flex justify-content-center justify-content-md-start">
+        Please&nbsp;select&nbsp;attendance&nbsp;Date.
+    </small>
+</article>
+<article class="h-75 w-100 d-flex justify-content-center align-items-center my-5 py-5 px-3 my-md-0 p-md-0">
+    <h2 class="text_d_blue">Seems like you don't have any classes today..</h2>
+</article>
+{% endif %}
+
+<script>
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    });
+</script>
+
 {% endblock %}
