--- a/attendance/templates/subject/subject_list.html
+++ b/attendance/templates/subject/subject_list.html
@@ -5,12 +5,6 @@
 <title>SAMS | Subjects</title>
 {% endblock %}
 
-{% block head %}
-<style>
-	/* Custom CSS */
-</style>
-{% endblock %}
-
 {% block content %}
 <div class="text-center text_d_blue arvo my-4 mt-md-0 mb-md-4">
 	<h3 class="m-0">Subject&nbsp;List&nbsp;View</h3>
@@ -24,13 +18,13 @@
 			<img src="{% static image_static %}" class="card-img-top img_border_radius" alt="{{ sub.hour_name }}">
 			{% endwith %}
 		</div>
-		<div class="card-body py-0 pb-1">
+		<div class="card-body py-0 pb-1 text_d_blue">
 			<h3 class="text-center upper_case font-weight-bold pb-1">{{ sub.hour_name }}</h3>
 			<h5 class="text-center capitalize pb-1 font_size_normal">{{ sub.sub_name }}</h5>
 			<!-- <div>Classroom : {{ sub.classroom.course }}</div> Incase you guys needed classroom name -->
 			<a href="{% url 'subject:subject_detail' sub.id %}" class="stretched-link"></a>
 		</div>
-		<div class="card-footer d-flex flex-row border_color_white bg-transparent">
+		<div class="card-footer d-flex flex-row border_color_white bg-transparent text_d_blue">
 			<h6 class="upper_case font_size_normal font-weight-bold">Staff&nbsp;:</h6>
 			<h6 class="input-group capitalize font_size_normal ml-2">
 				<svg aria-hidden="true" focusable="false" data-prefix="fad" data-icon="chalkboard-teacher" role="img"
