--- a/attendance/templates/attendancess/check_attendance.html
+++ b/attendance/templates/attendancess/check_attendance.html
@@ -1,11 +1,69 @@
 {% extends 'base.html' %}
+
+{% block title %}
+<title>SAMS | Attendance | Checking Student Attendance</title>
+{% endblock %}
+
+{% block head %}
+<style>
+    /* Custom CSS */
+    #tab_res .table td {
+        border-color: #ffffff;
+    }
+
+    #tab_res .table th {
+        border: 0;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
-    <h1>Welcome to Attendance checking page.</h1>
-    {% if data %}
-        {% for student in data %}
-            <ul>
-                <li>{{student.rollno}} - {{student.status}}</li>
-            </ul>
-        {% endfor %}
-    {% endif %}
+<section class="text-center text_d_blue arvo mt-2 mb-3 mt-md-0" style="margin-bottom: 35px;">
+    <h1>Attendance Report</h1>
+</section>
+<section class="pl-md-5 d-flex flex-column flex-md-row pt-md-2">
+    <h5 class="text-muted d-none d-md-flex justify-content-center justify-content-md-start">
+        Subject :
+    </h5>
+    <h5 class="ml-2 capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
+        {{ subject.sub_name }}
+    </h5>
+</section>
+<section class="container px-0 px-md-5 mx-auto d-flex d-md-block justify-content-center">
+    <div class="table-responsive table_wrapper table_box_shadow border_white my-3" id="tab_res">
+        <table class="table table-striped my-1 my-md-2">
+            <thead>
+                <tr class="text-center text_d_blue">
+                    <th class="upper_case">ID</th>
+                    <th class="upper_case">Username</th>
+                    <th class="upper_case">Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% if data %}
+                {% for student in data %}
+                <tr scope="row" class="text-center text_d_blue">
+                    <td class="upper_case"> {{ forloop.counter }} </td>
+                    <td class="capitalize"> {{ student.rollno }} </td>
+                    <td>
+                        <span class="capitalize badge badge_box_shadow border_white
+                            {% if student.status == 'Present' %}
+                            text-success
+                            {% elif student.status == 'Absent' %}
+                            text-danger
+                            {% endif %}">
+                            {{ student.status }}
+                        </span>
+                    </td>
+                </tr>
+                {% endfor %}
+                {% else %}
+                <tr scope="row" class="text-center text_d_blue">
+
+                </tr>
+                {% endif %}
+            </tbody>
+        </table>
+    </div>
+</section>
 {% endblock %}
